YUK-25296: dev task change table styling(fixed collection action alignment issue)

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -471,7 +471,7 @@ table {
 table td, 
 table th {
 	padding: 3px 5px;
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 table th, 
@@ -685,6 +685,7 @@ table.matrix{
     .name {
         min-width: 140px;
         color: #777;
+        vertical-align: middle;
     }
     &.name-collapse .name { min-width: inherit; }
     
